--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-table": "^8.16.0",
+    "@tiptap/extension-underline": "^2.25.0",
+    "@tiptap/react": "^2.25.0",
+    "@tiptap/starter-kit": "^2.25.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.0.2",
@@ -37,6 +40,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.1.0",
+    "react-quill": "^2.0.0",
     "recharts": "^2.12.6",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.6.0",
