--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@opentelemetry/api": "^1.5.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -33,7 +34,7 @@
     "framer-motion": "^11.1.7",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.372.0",
-    "next": "^14.2.3",
+    "next": "^14.1.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
